# laboratorio_programmazione

./: CMakeLists.txt  Note.cpp  Note.h  Notepad.cpp  Notepad.h  NotepadObserver.cpp  NotepadObserver.h  Observer.h  Subject.h  main.cpp
test/: CMakeLists.txt  NotepadFixture.cpp  NotepadTest.cpp
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/src/: gtest.cc
test/lib/googletest/test/: gtest_unittest.cc
